# copilot-repository-tools

./: .gitignore  =3.0.0  CHANGELOG.md  LICENSE  README.md  RELEASE.md  extract_chats.py  pyproject.toml  search_kusto.py
.claude/skills/scanner-refresh/: SKILL.md
.claude/skills/search-copilot-chats/: SKILL.md
.github/: copilot-instructions.md
.github/hooks/: hooks.json
.github/workflows/: ci.yml  release.yml
docs/adr/: 001-flask-webapp.md
docs/memory-config-examples/: README.md  mem0-config-copilot.json  mem0-config-ollama.json  mem0-config-openai.json
docs/specs/: flask-webapp.feature  flask-webapp.md
scripts/: bump_version.py
src/copilot_chat_archive/: __init__.py  cli.py  database.py  markdown_exporter.py  scanner.py  segments.py  viewer.py  webapp.py
src/copilot_chat_archive/templates/: error.html  index.html  session.html
src/copilot_repository_tools/: __init__.py  cli.py  database.py  html_exporter.py  markdown_exporter.py  scanner.py
src/copilot_repository_tools/scanner/: models.py
src/copilot_repository_tools/web/: __init__.py  webapp.py
src/copilot_repository_tools/web/templates/: session.html
src/copilot_session_tools/: __init__.py  cli.py  database.py  embeddings.py  html_exporter.py
src/copilot_session_tools/scanner/: __init__.py  cli.py  content.py  diff.py  discovery.py  git.py  vscode.py
src/copilot_session_tools/web/: __init__.py  webapp.py
src/copilot_session_tools/web/templates/: index.html  session.html
tests/: conftest.py  test_cli.py  test_database.py  test_html_exporter.py  test_markdown_exporter.py  test_memory.py  test_memory_package.py  test_scanner.py  test_segments.py  test_viewer.py  test_webapp.py  test_webapp_e2e.py
tests/sample_files/: cli-session-001.jsonl
