[project]
name = "copilot-repository-tools"
version = "0.1.0"
description = "A collection of tools for VS Code GitHub Copilot chat history"
readme = "README.md"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
copilot-repository-tools-common = { workspace = true }
copilot-repository-tools-cli = { workspace = true }
copilot-repository-tools-web = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-playwright>=0.4.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.14.11",
    "ty>=0.0.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages/common/src", "packages/cli/src", "packages/web/src"]
markers = [
    "slow: marks tests as slow (scanning real user data, run with '-m slow' or all with '-m \"\"')",
]

[tool.ruff]
line-length = 120
exclude = ["*.pyi"]

[tool.ruff.lint]
select = ["E", "F", "UP", "I", "B"]
ignore = [
    "E402",  # Module level import not at top of file (needed for circular import handling)
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["packages/*/src/**/*.py"]
exclude = ["tests/**"]

[tool.ty.rules]
unresolved-import = "warn"
possibly-unresolved-reference = "warn"
unresolved-attribute = "warn"  # Allow dynamic attribute assignment on dataclasses
